--- a/prepros-6.config
+++ b/prepros-6.config
@@ -30,13 +30,34 @@
     {
       "path": "scss/regions/_video.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "scss/elements/_config.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "scss/elements/_fonts.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "scss/elements/_mixins.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "scss/regions/_header.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "scss/style2.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss",
       "scss/elements",
-      "scss/regions"
+      "scss/regions",
+      "scss",
+      "scss/regions2"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -57,7 +78,25 @@
         "scss/elements/_mixins.scss",
         "scss/elements/_config.scss",
         "scss/elements/_fonts.scss",
-        "scss/regions/_header.scss"
+        "scss/elements/_base.scss",
+        "scss/elements/_video.scss",
+        "scss/regions/_header.scss",
+        "scss/regions/_countdown-container.scss",
+        "scss/regions/_video.scss",
+        "scss/regions/_foto-bg.scss",
+        "scss/regions/_side-serial.scss"
+      ]
+    },
+    {
+      "path": "scss/style2.scss",
+      "imports": [
+        "scss/elements/_mixins.scss",
+        "scss/elements/_config.scss",
+        "scss/elements/_fonts.scss",
+        "scss/elements/_base.scss",
+        "scss/elements/_video.scss",
+        "scss/regions2/_header.scss",
+        "scss/regions2/_nav.scss"
       ]
     }
   ],
